# CoarseAIR

./: CMakeLists.txt  LICENSE  README.md  TODO
README/: HowTo_GenerateLevels.txt  HowTo_PushPyCoarseAIR.txt  InputList.txt  NotesForRunners  ObjectsList.txt  README  TODO
README/Figures/: CreateFigures.key
README/LinesTo_Add_ToBashrc/: AddToBashrc.sh  AddToBashrc_Linux.sh  AddToBashrc_Linux_Desktop.sh  AddToBashrc_Pleiades.sh
README/TheoryNotes/: Integration.txt
app/ComputeLevels/: CMakeLists.txt  ComputeLevels.F90
app/DeriveQuantities/: Arrhenius_Class.F90  CMakeLists.txt  C_interface.F90  DeriveQuantities.F90  HEGEL_Class.F90  KONIG_Class.F90  arrhenius.c  arrhenius.h  arrhenius_OLD.c  arrhenius_OLD.h
app/FwdPropagation/: CMakeLists.txt  FwdPropagation.F90  KonigPostprocessingT_Class.F90  KonigPostprocessing_Class.F90
app/Initialize/: CMakeLists.txt  Initialize.F90
app/MergeLevels/: CMakeLists.txt  MergeLevels.F90
app/PlotPES/: CMakeLists.txt  PlotPES.F90  PlotPES_Module.F90
app/PostTrajectories/: CMakeLists.txt  PostTrajectories.F90  PostTrajectories_Orig.F90  PostTrajectories_Temp.F90
app/PreprocLevels/: CMakeLists.txt  PreprocLevels.F90
app/RegressionTesting/: CMakeLists.txt  RegressionTesting.F90  RegressionTesting_Module.F90
app/RunTrajectories/: CMakeLists.txt  RunTrajectories.F90
app/TrajectoriesStats/: CMakeLists.txt  Statistics_Class.F90  Statistics_Class_4Atoms.F90  TrajectoriesStats.F90  TrajectoriesStats_4Atoms.F90
config/: modulefile.in
config/cmake/: EnsureOutOfSourceBuild.cmake  FindOpenBLAS.cmake  (+4 more)
exec/: Generate_Arrhenius.py  Post_ME.py
src/: CMakeLists.txt  Input_Class.F90  qct.inc
src/Atoms/: Atom_Class.F90  CMakeLists.txt
src/AtomsPairs/: AtomsPair_Class.F90  CMakeLists.txt
src/BinnedMolecules/: Bin_Class.F90  BinsContainerT_Class.F90  CMakeLists.txt
src/BinnedMolecules/BinsContainer/: BinsContainer_Class.F90  BinsContainer_Factory_Class.F90  CMakeLists.txt  Energy_BinsContainer_Class.F90  FromFile_BinsContainer_Class.F90  Hybrid_BinsContainer_Class.F90  StS_BinsContainer_Class.F90  VibSpec_BinsContainer_Class.F90
src/Collision/: CMakeLists.txt  Collision_Class.F90  ImpactParameter_Class.F90  Integrator_Class.F90  Matrix_Inversion_Module.F90  Transformation_Class.F90
src/Collision/InitialStates/: CMakeLists.txt  StateInitDiatomAtom_Module.F90  StateInitDiatomDiatom_Module.F90
src/Collision/MolecularState/: CMakeLists.txt  MolecularStateParam_Class.F90  MolecularState_Class.F90
src/Collision/ODE/: CMakeLists.txt  ODE_Solver.F90  ODE_System.F90
src/Collision/Species/: CMakeLists.txt  Species_Class.F90
src/Collision/Trajectories/: CMakeLists.txt  Trajectories_Class.F90  TrajectoryPoint_Class.F90  Trajectory_Class.F90
src/Degeneracies/: CH_Degeneracy_Class.F90  CMakeLists.txt  CN_Degeneracy_Class.F90  CO_Degeneracy_Class.F90  Degeneracy_Class.F90  Degeneracy_Factory_Class.F90  G2_Degeneracy_Class.F90  HN_Degeneracy_Class.F90  N2_Degeneracy_Class.F90  NO_Degeneracy_Class.F90  O2_Degeneracy_Class.F90  OH_Degeneracy_Class.F90
src/DiatomicPotentials/: CH_UIUC_DiatomicPotential_Class.F90  CMakeLists.txt  CN_UIUC_DiatomicPotential_Class.F90  CO_DiatomicPotential_Class.F90  DiatomicPotential_Class.F90  DiatomicPotential_Factory_Class.F90  HN_UIUC_DiatomicPotential_Class.F90  ModMorse_DiatomicPotential_Class.F90  Modified_Morse_DiatomicPotential_Class.F90  Morse_DiatomicPotential_Class.F90  N2_LeRoy_DiatomicPotential_Class.F90  N2_MyLeRoy_DiatomicPotential_Class.F90  N2_OriginalLeRoy_DiatomicPotential_Class.F90  N2_UMN_ForN2O2_DiatomicPotential_Class.F90  N2_UMN_ForN4_DiatomicPotential_Class.F90  N2_UMN_PIPNN_ForN4_DiatomicPotential_Class.F90  NO_Basel_DiatomicPotential_Class.F90  NO_UMN_DiatomicPotential_Class.F90  Null_DiatomicPotential_Class.F90  O2_Basel_DiatomicPotential_Class.F90  O2_NASA_DiatomicPotential_Class.F90  O2_UMN_DiatomicPotential_Class.F90  O2_Varandas_DiatomicPotential_Class.F90  OH_IIT_DiatomicPotential_Class.F90
src/Levels/: CMakeLists.txt  Level_Class.F90  LevelsContainer_Class.F90  LevelsGenerator_Module.F90
src/Molecules/: CMakeLists.txt  Molecule_Class.F90  Molecule_Factory_Class.F90  MoleculesContainer_Class.F90  Nb2_Molecule_Class.F90
src/Objects/: Atom.py  Molecule.py
src/PESs/: BNN_PES_Class.F90  CHN_UIUC_PES_Class.F90  CMakeLists.txt  CNO_Basel_PES_Class.F90  CO2_NASA_PES_Class.F90  COAr_NASA_PES_Class.F90  GP_PES_Class.F90  HO2_CHIPR_PES_Class.F90  HO2_MB_PES_Class.F90  HO3_NNM_PES_Class.F90  LEPS_PES_Class.F90  N2O_Basel_PES_Class.F90  N2O_UMN_PES_Class.F90  N3Half_NASA_PES_Class.F90  N3_NASA_PES_Class.F90  N3_UMN_PES_Class.F90  N4_NASA_PES_Class.F90  N4_UMN_PES_Class.F90  N4_UMN_PIPNN_PES_Class.F90  NN_PES_Class.F90  NO2_Basel_PES_Class.F90  O3_NN_PES_Class.F90  O3_UMN_PES_Class.F90  O4_UMN_PES_Class.F90  PES_Class.F90  PES_Factory_Class.F90  PESsContainer_Class.F90  RS_for_CO2_NASA.f
src/PESs/PlotPES/: CMakeLists.txt  Nb3_PlotPES_Class.F90  Nb4_PlotPES_Class.F90  PlotPES_Class.F90  PlotPES_Factory_Class.F90
src/Pairs/: AtomsPair_Class.F90
src/Parameters/: CMakeLists.txt  Global_Module.F90  Parameters_Module.F90
src/Processes/: CMakeLists.txt  Nb3Atoms_Processes_Class.F90  Nb4Atoms_Processes_Class.F90  Process_Class.F90  Processes_Class.F90  Processes_Factory_Class.F90  Temperature_Class.F90
src/Random/: CMakeLists.txt  RandomVectorBis_Module.F90  RandomVector_Module.F90  Random_Module.F90
src/Stand-Alone/: MergeRatesMultipleTs.py
src/System/: CMakeLists.txt  Nb3_System_Class.F90  Nb4_System_Class.F90  System_Class.F90  System_Factory_Class.F90
src/Tools/: CMakeLists.txt  GaussQuadrature_Module.F90  Output_Module.F90  Sorting_Module.F90  gaussqd.F90  timing_module.F90
src/Tools_BrunoS/: CMakeLists.txt  Error_Class.F90  File_Class.F90  LoggerItem_Class.f90  Logger_Class_old.f90  README  String_Module.f90
src/Tools_BrunoS/Logger/: .gitignore  CMakeLists.txt  LoggerItem_Class.f90  LoggerItem_SubClass.f90  Logger_Class.f90  Logger_NumberToString_Inline.F90  Logger_SubClass.f90  README  logger_variable_class.f90
test/: CompareToVVTC_N3.m  CompareToVVTC_N3.m~
(+7205 files in other folders)
