add_subdirectory ( Atoms )
add_subdirectory ( BinnedMolecules )
add_subdirectory ( Collision )
add_subdirectory ( Degeneracies )
add_subdirectory ( DiatomicPotentials )
add_subdirectory ( Levels )
add_subdirectory ( Molecules )
add_subdirectory ( AtomsPairs )
add_subdirectory ( Parameters )
add_subdirectory ( PESs )
add_subdirectory ( Processes )
add_subdirectory ( Random )
add_subdirectory ( System )
add_subdirectory ( Tools )
add_subdirectory ( Tools_BrunoS )

add_sources (
  Input_Class.F90
)
