add_subdirectory ( PlotPES )

# Adding source files of current directory to be compiled
add_sources (
  PESsContainer_Class.F90
  PES_Class.F90
  PES_Factory_Class.F90
  N3_NASA_PES_Class.F90
  N3_UMN_PES_Class.F90
  N3Half_NASA_PES_Class.F90
  N4_NASA_PES_Class.F90
  N4_UMN_PES_Class.F90
  N4_UMN_PIPNN_PES_Class.F90
  CO2_NASA_PES_Class.F90
  RS_for_CO2_NASA.f
  COAr_NASA_PES_Class.F90
  O3_UMN_PES_Class.F90
  O4_UMN_PES_Class.F90
  O3_NN_PES_Class.F90
  N2O_UMN_PES_Class.F90
  N2O_Basel_PES_Class.F90
  NO2_Basel_PES_Class.F90
  NO2_Basel_PES_Class.F90
  CNO_Basel_PES_Class.F90
  CHN_UIUC_PES_Class.F90
  LEPS_PES_Class.F90
  NN_PES_Class.F90
  BNN_PES_Class.F90
  GP_PES_Class.F90
  HO3_NNM_PES_Class.F90
)
